# sports-data-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
infrastructure/terraform/environments/dev/: ARCHITECTURE.md  README.md  main.tf
infrastructure/terraform/environments/dev/compute/: main.tf
infrastructure/terraform/environments/dev/core/: main.tf
infrastructure/terraform/environments/dev/database/: main.tf
notebooks/: README.md
src/ingestion/nfl/: api_client.py  ingest.py
src/transformation/: .gitignore
src/transformation/sports_dbt/: dbt_project.yml
src/utils/: azure_storage.py  config.py  logging.py
tests/unit/: test_config.py
